[package]
name = "fslock"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.66"

[target.'cfg(windows)'.dependencies.winapi]
version = "^0.3.8"
features = [
    "minwindef", 
    "minwinbase",
    "winbase",
    "errhandlingapi",
    "winerror",
    "winnt",
    "synchapi",
    "handleapi",
    "fileapi"
]

[features]
default = ["std"]
std = []
